# Autonomous-Navigation-Offroad-by-traversability-analysis

./: .gitignore  LICENSE  README.md  SAM_RGB_Only_analyse_IROS2024_grid.ipynb  nohup.out  pyproject.toml  requirements.txt
Testing_Results/: labellizer.py  output.avi  results_quantifier.py  test2.py  test3.py  traversal_cost_vs_velocity.py
Testing_Results/ResNet18/: Heavy Resolution.avi
Testing_Results/ResNet18Velocity/: network.avi
Testing_Results/ResNet18Velocity_Augmented/: base.avi  filtered.avi  quantile.avi  road_grass_branches.avi
Testing_Results/ResNet18Velocity_Regression/: 20epoch1e-4lr.avi  40epoch1e-4lr.avi  40epoch1e-6lr.avi
Testing_Results/ResNet18_Velocity_Regression_V2/: TerrainSample_filtered.avi  terrain_sample_filtered.avi  total_filtered_hard.avi
bagfiles/: rosbag_record.sh
bagfiles/images_extracted/: costmaps1.npy  costmaps10.npy  costmaps11.npy  costmaps12.npy  costmaps13.npy  costmaps14.npy  costmaps15.npy  costmaps2.npy  costmaps3.npy  costmaps4.npy  costmaps5.npy  costmaps6.npy  costmaps7.npy  costmaps8.npy  costmaps9.npy  files.npy
datasets/: README.md
scripts/: install  uninstall
src/: ref_normal.py
src/data_preparation/: create_dataset.py  create_dataset_filtered.py  data_preparation.py  data_transforms.py  dataset_modif.py  image_extractor  image_extractor.py  show_dataset.py
src/depth/: test_depth.py
src/models_development/: fine_tuning.py  model_development.py  train_test.ipynb  train_test_classification.ipynb  train_test_dropout.ipynb  train_test_regression.ipynb  train_test_velocity.ipynb
src/models_export/: setup.py
src/obstacle_detection/: depth_to_pointcloud_node.py  docs.ipynb  felzenswalb_segmentation.py  normals.py  normals_trials.ipynb  obstacle_from_pointcloud.ipynb  pointcloud.py  pointcloud_analysis.ipynb  publish_normals.py  rosbag_depth_to_pointclouds.py  trial.py  utils.py
src/params/: setup.py
(+72 files in other folders)
