[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "--import-mode=importlib",
]
[tool.poetry]
name = "traversability-analysis"
version = "0.1.0"
description = "Self-supervised learning of terrain traversals costs for an Unmanned Ground Vehicle"
authors = ["Guillaume THOMAS (Whojo) <guillaume.thomas@ensta-paris.fr>"]
readme = "README.md"
packages = [
    { include = "data_preparation", from = "src" },
    { include = "depth", from = "src/depth" },
    { include = "models_development", from = "src" },
    { include = "model_uncertainty", from = "src" },
    { include = "params", from = "src/params" },
    { include = "ros_nodes", from = "src" },
    { include = "semantic_segmentation", from = "src" },
    { include = "traversalcost", from = "src/traversal_cost" },
    { include = "utils", from = "src" },
    { include = "utilities", from = "src/utils" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tifffile = "2023.7.10"
scipy = "1.10.1"
matplotlib = "3.7.3"
ray = {extras = ["tune"], version = "^2.8.0"}
pytest = "7.4.2"
kymatio = "0.3.0"
numpy = "1.24.4"
optuna = "3.3.0"
pandas = "2.0.3"
pillow = "10.0.0"
pywavelets = "1.4.1"
scikit-learn = "1.3.0"
setuptools = "45.2.0"
tabulate = "0.9.0"
ipywidgets = "^8.1.1"
torchsummary = "1.5.1"
torchvision = "0.15.0"
tqdm = "4.66.1"
opencv-python = "^4.8.1.78"
torch = "2.0.0"
pycryptodomex = "^3.19.0"
python-gnupg = "^0.5.1"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
rospkg = "^1.5.0"
plotly = "^5.18.0"
nbformat = "4.2.0"
scikit-image = "^0.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
line-profiler = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
